--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,7 +5,16 @@
     box-sizing: border-box;
 }
 
+/* General styles */
 
+body {
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+    /* Generic project styles */
+    color: #3a3a3a;
+
+}
 
 /*header*/
 header {
@@ -14,8 +23,11 @@ header {
 /*main*/
 main {
     background-color: lightblue;
+    /* Make main element take up space to push footer down */
+    flex: 1 0 auto;
 }
 /*footer*/
 footer {
     background-color:orange;
+
 }
