--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,6 @@
+ /* Google fonts import */
+@import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@1,300&family=Oswald:wght@200;300;400;500;600;700&display=swap');
+
 /* Asterix wild card selector to overide default styles added by the browser*/
 * {
     padding: 0;
@@ -13,6 +16,7 @@ body {
     flex-direction: column;
     /* Generic project styles */
     color: #3a3a3a;
+    font-family: "Lato", sans serif;
 
 }
 
