--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,5 @@
  /* Google fonts import */
-@import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@1,300&family=Oswald:wght@200;300;400;500;600;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Lato:wght@300&family=Oswald:wght@200;300;400;500;600;700&display=swap');
 
 /* Asterix wild card selector to overide default styles added by the browser*/
 * {
@@ -16,13 +16,16 @@ body {
     flex-direction: column;
     /* Generic project styles */
     color: #3a3a3a;
-    font-family: "Lato", sans serif;
+    font-family: 'Lato', sans serif;
 
 }
 
 /*header*/
 header {
    background-color: lightcoral; 
+}
+h1 {
+    font-family: "Oswald", sans-serif;
 }
 /*main*/
 main {
