Add margin-top to main element so it appears under fixed header

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -81,6 +81,7 @@ main {
     background-color: lightblue;
     /* Make main element take up space to push footer down */
     flex: 1 0 auto;
+    margin-top: 47px;
 }
 /*footer*/
 footer {
