deploy and changed background color

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -77,11 +77,16 @@ nav {
 
 
 /*main*/
-main {
-    background-color: lightblue;
+main { 
     /* Make main element take up space to push footer down */
     flex: 1 0 auto;
     margin-top: 47px;
+}
+/* Hero section*/
+#hero {
+    height: 600px;
+    width: 100%;
+    background-color: lightgreen
 }
 /*footer*/
 
