--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -86,7 +86,7 @@ main {
 #hero {
     height: 600px;
     width: 100%;
-    background-color: lightgreen
+    background: url("../images/hero-image (1).webp") no-repeat center center/cover;
 }
 /*footer*/
 
