--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -17,9 +17,14 @@ body {
     /* Generic project styles */
     color: #3a3a3a;
     font-family: 'Lato', sans serif;
-
 }
 
+h1, h2, h3 {
+    font-family: "Oswald", sans-serif;
+    text-transform: uppercase;
+    letter-spacing: 2px;
+    color: #252525;
+}
 /*header*/
 header {
    background-color: #ffffff; 
@@ -36,12 +41,7 @@ header a {
     text-decoration: none;
     color: inherit;
 }
-h1 {
-    font-family: "Oswald", sans-serif;
-    text-transform: uppercase;
-    letter-spacing: 2px;
-    color: #252525;
-}
+
 #menu {
     font-size: 110%;
     letter-spacing: 4px;
@@ -87,7 +87,24 @@ main {
     height: 600px;
     width: 100%;
     background: url("../images/hero-image (1).webp") no-repeat center center/cover;
+    position:relative;
 }
+/* Final rgba value set the opacity so it semi transparent*/
+#cover-text {
+    background-color: rgba(241, 109, 107, .7);
+    font-size: 130%;
+    position: absolute;
+    bottom: 30px;
+    width: 80%;
+    min-height: 200px;
+    padding-top: 40px;
+    padding-left: 10px;
+}
+
+#cover-text > h2, #cover-text > h3 {
+    color: #ffffff;
+}
+
 /*footer*/
 
   #social-networks {
@@ -101,9 +118,6 @@ main {
     font-size: 160%;
     padding: 5%;
     color: #3a3a3a;
-    
-
-
   }
 
 /*Media query: tablets and larger (768px and up)*/
@@ -134,6 +148,12 @@ main {
     main {
         /* Push main content down to accomodate larger header */
         margin-top: 79px;
+    }
+    /* Hero */
+    #cover-text {
+        width: 300px;
+        right: 50px;
+        
     }
     /* Large devices (laptops and desktops,992px and up) */
     @media screen and (min-width: 992px) {
