--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -43,10 +43,10 @@ header a {
 }
 
 #menu {
-    font-size: 110%;
-    letter-spacing: 4px;
-    list-style-type: none;
-}
+      font-size: 110%;
+      letter-spacing: 4px;
+      list-style-type: none;
+    }
 #menu > li {
     margin-bottom: 1em;
 }
@@ -153,7 +153,33 @@ main {
     #cover-text {
         width: 300px;
         right: 50px;
-        
+    }
+
+/* Reasons section */
+#reasons {
+    width: 90%;
+    margin: 20px auto;
+}
+
+#reasons h2 {
+    margin-bottom: 20px;
+    text-align: center;
+    font-size: 280%;
+}
+
+#benefits-physical > div,
+#benefits-mental > div {
+    line-height: 20px;
+    margin-bottom: 20px;
+    }
+
+    #benefits p {
+        padding: 0 20px;
+    }
+    
+    #benefits hr {
+        border-top: 1px solid #3a3a3a;
+        margin: 5px 0;
     }
     /* Large devices (laptops and desktops,992px and up) */
     @media screen and (min-width: 992px) {
